syntax = "proto3";

package user;

option go_package = "proto/";

service UserService {
  rpc GetUserByID (GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest {
  uint32 id = 1;
}

message GetUserResponse {
  uint32 id = 1;
  string email = 2;
  string name = 3;
  string role = 4;
}
